# hiero-did-sdk-python

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/hiero_did/: __init__.py  did_client.py  did_document.py  did_parser.py  hcs_message.py  types.py
tests/integration/: test_did_e2e.py
tests/unit/: test_did_client.py  test_did_document.py  test_did_parser.py  test_hcs_message.py
